--- a/styles/profilesettings.css
+++ b/styles/profilesettings.css
@@ -2,28 +2,46 @@
     width: 100%;
 } */
 
+body {
+    /* background-color: rgb(252, 252, 252); */
+}
+
+.section-title {
+    background-color: #d76d77;
+    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
+    background-size: 600%;
+    background-position: left;
+    color: #fff;
+    box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.3);
+}
+
 .section-title span {
     color: #ffaf7b;
+    color: white;
     display: block;
     width: fit-content;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     font-size: 1.5rem;
     padding: 0.5rem 1rem;
 }
 
 .section-content {
-    padding: 0 50px 40px;
+    padding: 0 0px 40px;
 }
 section {
-    box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.3);
-    margin-bottom: 40px;
-    border: 1px solid #eee;
-    border-radius: 5px;
+    /* box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.3); */
+    margin-bottom: 20px;
+    /* border: 1px solid #eee; */
+    /* border-bottom: 1px solid #ffaf7ba0; */
+    /* border: 1px solid #ffaf7ba0; */
+
+    /* border-radius: 3px; */
 }
 /* .secdiv {
-    height: 2px;
-    width: 20%;
-    background-color: #eee;
+    height: 1px;
+    width: 100%;
+    background-color: #ffaf7b;
+    border-radius: 1000px;
     margin: 0 auto 40px;
 } */
 
@@ -37,6 +55,13 @@ section {
 .secondary-sec {
     /* display: inline-block; */
     width: calc(50% - 40px);
+    width: calc(50%);
+}
+.primary-sec {
+    padding-right: 20px;
+}
+.secondary-sec {
+    padding-left: 20px;
 }
 
 .button-holder {
@@ -88,29 +113,39 @@ section {
 .compare-table {
     display: flex;
     /* display: block; */
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin: 40px 0px;
     /* justify-content: safe; */
 }
 .card {
-    /* border: 1px solid grey; */
+    border: 1px solid #eee;
+    border-radius: 10px;
     text-align: center;
     width: calc((100% / 3) - 10px);
     max-width: 350px;
     padding: 0px 10px;
     color: #555;
-    box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 0px 1px rgba(0, 0, 0, 0.1); */
+    overflow: hidden;
+
     background-color: white;
     transition: 0.3s linear;
 }
 .card div {
     padding: 10px 0;
     border-bottom: 1px solid #eee;
+    transition: 0.3s;
 }
 
 .card:hover {
     transform: scale(1.1);
     z-index: 1;
+    box-shadow: 0px 2px 15px -5px rgba(255, 175, 123, 0.6);
+    border: 1px solid #ffaf7b;
+}
+.card:hover > div {
+    /* border-bottom: 1px solid #ffaf7b; */
 }
 .card div:nth-child(1) {
     padding: 20px 0;
@@ -154,13 +189,13 @@ section {
     transform: scale(0.8);
 }
 
-.card div:last-child button:disabled {
-    background: -webkit-linear-gradient(120deg, #646464, #b1b1b1, #ececec);
-    cursor: default;
-}
-
 .card div button:hover {
     background-position: right;
+}
+.card div:last-child button:disabled {
+    /* background: -webkit-linear-gradient(120deg, #646464, #b1b1b1, #ececec); */
+    cursor: not-allowed;
+    background-position: left;
 }
 
 .request-status {
