--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -1,94 +1,6 @@
-/* @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'IBM Plex Sans';
-    font-family: 'Roboto', sans-serif;
-    text-decoration: none;
-}
-html {
-    height: 100%;
-}
-:root {
-    --vio: #3a1c71;
-    --mist: #d76d77;
-    --sal: #ffaf7b;
-}
-body {
-    background-color: rgb(250, 250, 250);
-    /* background-color: #eeeeee; */
-    height: 100%;
-    background-color: #fff;
-}
-.ad-holder {
-    display: flex;
-    min-height: 100%;
-}
-.ad-sidebar {
-    display: inline-block;
-    /* position: fixed; */
-    /* height: 100vh; */
-    min-height: 100%;
-    width: 250px;
-    background-color: #ffcc00;
-    background-color: #ffaf7b;
-    background-color: #3a1c71;
-    /* background: -webkit-linear-gradient(160deg, #3a1c71, #d76d77, #ffaf7b);
-    background-size: 500%;
-    background-position: left; */
-    background-color: #5f6f75;
-    background-color: #fff;
-    box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.15),
-        0 4px 8px rgba(0, 0, 0, 0.15), 0 8px 16px rgba(0, 0, 0, 0.15),
-        0 16px 32px rgba(0, 0, 0, 0.15), 0 32px 64px rgba(0, 0, 0, 0.15);
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07),
-        0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
-        0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
-}
-.ad-side {
-    width: 250px;
-    position: sticky;
-    /* top: 0; */
-    position: fixed;
-    left: 0;
-}
-.ad-side ul li {
-    list-style: none;
-    margin: 10px 10px;
-}
-.ad-side ul li a {
-    display: inline-flex;
-    width: 100%;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
-    color: #333;
-    color: #fff;
-    transition: 0.3s linear;
-    background-color: white;
-    background-color: #999;
-    border-radius: 3px;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
-}
-
-.ad-side ul li a:hover {
-    background-color: #555;
-    color: #fff;
-}
-
-.ad-container {
-    display: inline-block;
-    width: calc(100% - 250px);
-}
 .counts {
     width: 90%;
-    margin: 35px auto 10px;
+    margin: 20px auto 10px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -205,24 +117,13 @@ body {
 .counts .inner-row .count-card .details {
     display: flex;
     flex-wrap: wrap;
-    /* margin-top: 20px; */
     padding-top: 10px;
     padding-bottom: 10px;
     width: 100%;
 }
-.counts .inner-row .count-card .note-details {
-    /* border-top: 1px solid var(--sal); */
-}
-.counts .inner-row .count-card .file-details {
-    /* border-top: 1px solid var(--mist); */
-}
-.counts .inner-row .count-card .url-details {
-    /* border-top: 1px solid var(--vio); */
-}
 
 .counts .inner-row .count-card .details .small-details {
     padding: 5px;
-    /* border: 1px solid #eee; */
     width: 50%;
     display: flex;
     justify-content: center;
@@ -233,7 +134,6 @@ body {
     margin: 0 auto 50px;
 }
 .overall-graph-title {
-    /* background-color: #66bb6a; */
     padding: 20px;
     padding-left: 30px;
     font-size: 1.2rem;
@@ -331,7 +231,20 @@ body {
         max-width: calc(100% / 2);
     }
 }
+
 @media (max-width: 1000px) {
+    .counts {
+        width: 100%;
+    }
+    .overall-graph-holder {
+        width: 100%;
+    }
+    .graphs {
+        width: 100%;
+    }
+}
+
+@media (max-width: 600px) {
     .graph-card-wrapper {
         flex: 0 0 calc(100%);
         max-width: calc(100%);
@@ -339,20 +252,5 @@ body {
     .counts .inner-row {
         flex: 0 0 calc(100%);
         max-width: calc(100%);
-    }
-}
-
-@media (max-width: 600px) {
-    .ad-sidebar {
-        display: none;
-    }
-    .ad-container {
-        width: 100%;
-    }
-    .counts {
-        width: 100%;
-    }
-    .graphs {
-        width: 100%;
     }
 }
