--- a/styles/planmoderation.css
+++ b/styles/planmoderation.css
@@ -1,124 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'IBM Plex Sans';
-    font-family: 'Roboto', sans-serif;
-    text-decoration: none;
-}
-html {
-    height: 100%;
-}
-:root {
-    --vio: #3a1c71;
-    --mist: #d76d77;
-    --sal: #ffaf7b;
-}
-body {
-    background-color: rgb(250, 250, 250);
-    /* background-color: #eeeeee; */
-    height: 100%;
-    background-color: #fff;
-}
-.ad-holder {
-    display: flex;
-    min-height: 100%;
-}
-.ad-sidebar {
-    display: inline-block;
-    /* position: fixed; */
-    /* height: 100vh; */
-    min-height: 100%;
-    width: 250px;
-    background-color: #ffcc00;
-    background-color: #ffaf7b;
-    background-color: #3a1c71;
-    /* background: -webkit-linear-gradient(160deg, #3a1c71, #d76d77, #ffaf7b);
-    background-size: 500%;
-    background-position: left; */
-    background-color: #5f6f75;
-    background-color: #fff;
-    box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.15),
-        0 4px 8px rgba(0, 0, 0, 0.15), 0 8px 16px rgba(0, 0, 0, 0.15),
-        0 16px 32px rgba(0, 0, 0, 0.15), 0 32px 64px rgba(0, 0, 0, 0.15);
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07),
-        0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
-        0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
-}
-.ad-side {
-    width: 250px;
-    position: sticky;
-    /* top: 0; */
-    position: fixed;
-    left: 0;
-}
-.ad-side ul li {
-    list-style: none;
-    margin: 10px 10px;
-}
-.ad-side ul li a {
-    display: inline-flex;
-    width: 100%;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
-    color: #333;
-    color: #fff;
-    transition: 0.3s linear;
-    background-color: white;
-    background-color: #999;
-    border-radius: 3px;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
-}
-
-.ad-side ul li a:hover {
-    background-color: #555;
-    color: #fff;
-}
-
-.ad-container {
-    display: inline-block;
-    width: calc(100% - 250px);
-}
-
-/* 
-<div class="mini-ad-container">
-    <div class="search-row">
-        <input type="text" placeholder="search for user" />
-    </div>
-    <div class="user-plate">
-        <div class="user-details">
-            <div class="username">
-                siam
-            </div>
-            <div class="plan">
-                <span>basic</span><span>to</span
-                ><span>pro</span>
-            </div>
-            <div class="summary">
-                <span>17 Notes</span>
-                <span>2.5MB Files</span>
-                <span>11 URLs</span>
-            </div>
-        </div>
-        <div class="actions">
-            <div class="star-holder">
-                <button>*</button>
-            </div>
-            <div class="action-buttons-holder">
-                <button class="action-button">A</button>
-                <button class="action-button">B</button>
-            </div>
-        </div>
-    </div>
-</div> */
-
 .mini-ad-container {
     width: 70%;
     margin: 0px auto;
@@ -165,7 +44,7 @@ body {
 .user-plate {
     border-bottom: 1px solid #ddd;
     padding: 15px 0px;
-    height: fit-content;
+    min-height: fit-content;
 }
 
 .user-plate:nth-of-type(1) {
@@ -238,7 +117,7 @@ body {
 }
 .row3 {
     position: relative;
-    height: 40px;
+    min-height: 40px;
     /* background-color: #ffcc00; */
 }
 .summary {
@@ -281,8 +160,6 @@ body {
 .action-buttons-holder button:nth-of-type(2) {
     background-color: green;
     background: -webkit-linear-gradient(-90deg, #66bb6a, #43a047);
-    /* border: 1px solid #2ec551; */
-    /* color: rgb(26, 88, 37); */
 }
 .action-buttons-holder button:nth-of-type(1) {
     background: -webkit-linear-gradient(-90deg, #aaa, #666);
@@ -300,27 +177,27 @@ body {
 }
 
 @media (max-width: 800px) {
-    .ad-sidebar {
-        display: none;
-    }
-    .ad-container {
-        width: 100%;
-    }
     .mini-ad-container {
         width: calc(100% - 20px);
     }
     .row3 {
-        position: relative;
+        position: static;
         display: block;
-        height: fit-content;
+        /* min-height: 40px; */
     }
     .summary {
         position: static;
     }
     .action-buttons-wrapper {
-        min-height: 40px;
+        /* min-height: 40px; */
+        margin-top: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        position: static;
     }
     .action-buttons-holder {
-        position: absolute;
+        position: static;
+        bottom: auto;
     }
 }
